Fixed the bug for Android 9

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginLeft="50dp">
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:background="#FC6A7D"
             android:gravity="center"
             android:text="Sun" />
@@ -39,8 +39,8 @@
         android:layout_toRightOf="@+id/sun"
         android:layout_marginTop="50dp">
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:background="#FFA04E"
             android:text="Mon"
             android:gravity="center" />
@@ -53,8 +53,8 @@
         android:layout_toRightOf="@+id/mon"
         android:layout_marginTop="50dp">
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:background="#FFF757"
             android:gravity="center"
             android:text="Tue" />
@@ -67,8 +67,8 @@
         android:layout_toRightOf="@+id/tue"
         android:layout_marginTop="50dp">
     <TextView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="90dp"
+        android:layout_height="120dp"
         android:background="#C9FA5D"
         android:gravity="center"
         android:text="Wed" />
@@ -81,8 +81,8 @@
         android:layout_toRightOf="@id/wed"
         android:layout_marginTop="50dp">
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:background="#5FC6DF"
             android:text="Thu"
             android:gravity="center" />
@@ -95,8 +95,8 @@
         android:layout_toRightOf="@+id/thu"
         android:layout_marginTop="50dp">
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:background="#BA9CD1"
             android:text="Fri"
             android:gravity="center" />
@@ -109,8 +109,8 @@
         android:layout_marginTop="50dp"
         android:id="@+id/sat">
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:background="#D482BF"
             android:gravity="center"
             android:text="Sat" />
@@ -119,25 +119,26 @@
     <RelativeLayout
         android:id="@+id/pills"
         android:layout_width="676dp"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/sun"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
         android:background="@color/white">
 
         <ImageView
             android:id="@+id/pill1.0"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="126dp"
+            android:layout_marginTop="26dp"
             android:layout_marginLeft="603dp"
             app:srcCompat="@drawable/pill1"
             android:tag="pill1.0" />
+
         <ImageView
             android:id="@+id/pill2.0"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="147dp"
+            android:layout_marginTop="47dp"
             android:layout_marginLeft="386dp"
             app:srcCompat="@drawable/pill2"
             android:tag="pill2.0"/>
@@ -147,7 +148,7 @@
             android:id="@+id/pill1.1"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="210dp"
+            android:layout_marginTop="80dp"
             android:layout_marginLeft="103dp"
             app:srcCompat="@drawable/pill1"
             android:tag="pill1.1"/>
@@ -155,7 +156,7 @@
             android:id="@+id/pill2.1"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="134dp"
+            android:layout_marginTop="34dp"
             android:layout_marginLeft="554dp"
             app:srcCompat="@drawable/pill2"
             android:tag="pill2.1"/>
@@ -183,7 +184,7 @@
             android:id="@+id/pill1.3"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="211dp"
+            android:layout_marginTop="50dp"
             android:layout_marginLeft="579dp"
             app:srcCompat="@drawable/pill1"
             android:tag="pill1.3"/>
@@ -192,7 +193,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="57dp"
-            android:layout_marginLeft="226dp"
+            android:layout_marginLeft="134dp"
             app:srcCompat="@drawable/pill2"
             android:tag="pill2.3"/>
 
@@ -201,15 +202,16 @@
             android:id="@+id/pill1.4"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="175dp"
             android:layout_marginLeft="408dp"
-            app:srcCompat="@drawable/pill1"
-            android:tag="pill1.4"/>
+            android:layout_marginTop="24dp"
+            android:tag="pill1.4"
+            app:srcCompat="@drawable/pill1" />
+
         <ImageView
             android:id="@+id/pill2.4"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="189dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="330dp"
             app:srcCompat="@drawable/pill2"
             android:tag="pill2.4"/>
@@ -219,7 +221,7 @@
             android:id="@+id/pill1.5"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="50dp"
             android:layout_marginLeft="212dp"
             app:srcCompat="@drawable/pill1"
             android:tag="pill1.5"/>
@@ -227,8 +229,8 @@
             android:id="@+id/pill2.5"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="123dp"
-            android:layout_marginLeft="524dp"
+            android:layout_marginTop="103dp"
+            android:layout_marginLeft="264dp"
             app:srcCompat="@drawable/pill2"
             android:tag="pill2.5"/>
 
@@ -237,7 +239,7 @@
             android:id="@+id/pill1.6"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="165dp"
+            android:layout_marginTop="65dp"
             android:layout_marginLeft="521dp"
             app:srcCompat="@drawable/pill1"
             android:tag="pill1.6"/>
